<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/registration"
            android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/registration_text"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="#F8BBD0"
               android:layout_marginTop="@dimen/_30sdp"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
        android:id="@+id/full_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

            <EditText
            android:id="@+id/edt_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
                android:textSize="@dimen/_12sdp"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/contact_no"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name"
       >
        <EditText
            android:id="@+id/edt_contact_no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="12"
            android:textSize="@dimen/_12sdp"
            android:hint="@string/contact"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       >
        <EditText
            android:id="@+id/edt_email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/_12sdp"
            android:hint="@string/email_add"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                >
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/_12sdp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/cnfrm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/edt_cnfrm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/_12sdp"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/present_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
               >
                <EditText
                    android:id="@+id/edt_present_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/present_address"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/permanent_add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            >
                <EditText
                    android:id="@+id/edt_permanent_add"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/permanent_add"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/registration_back"
        android:text="@string/register"
                android:layout_marginBottom="@dimen/_15sdp"
        android:textColor="#fff" />
        </LinearLayout>
          </ScrollView>
        </LinearLayout>