<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/add_driver"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:drawablePadding="@dimen/_8sdp"
        android:drawableRight="@drawable/ic_driver"
        android:textColor="@color/title_color"
        android:textSize="@dimen/_15sdp" />
    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/white_color"
                android:hint="@string/first_name"
                android:paddingLeft="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="#6d6e71"
                android:textSize="@dimen/_11sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/view_devider" />
            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/white_color"
                android:hint="@string/last_name"

                android:paddingLeft="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="#6d6e71"
                android:textSize="@dimen/_11sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/view_devider" />
            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/white_color"
                android:inputType="number"
                android:hint="@string/mobile_no"
                android:maxLength="10"
                android:paddingLeft="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="#6d6e71"
                android:textSize="@dimen/_11sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/view_devider" />

            <EditText
                android:id="@+id/edt_dateof_birth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/white_color"
                android:clickable="false"
                android:drawableRight="@drawable/ic_calendar"
                android:drawablePadding="@dimen/_10sdp"
                android:focusable="false"
                android:hint="@string/date_birth"
                android:paddingLeft="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="#6d6e71"
                android:textSize="@dimen/_11sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/view_devider" />
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/white_color"
                android:hint="@string/email_add"
                android:paddingLeft="@dimen/_15sdp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColor="#6d6e71"
                android:textSize="@dimen/_11sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/view_devider" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/_200sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/submit"
                android:textColor="@color/white_color"
                android:background="@drawable/btn_back"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>









